# edu.cpp.stroustrup.cpp_language

./: .gitignore  README.md
src/chap-004/: ascii  ascii.cpp  definitions  definitions.cpp  definitions.h  hello_world  type_limits  type_limits.cpp  type_size  type_size.cpp
src/chap-005/: 1  char_const  char_const.cpp  date_struct  declare  declare.cpp  month  month.cpp  ordered_words  ordered_words.cpp  print_month_fn  print_month_fn.cpp  ref_example  ref_example.cpp  string_search  string_search.cpp  swap_int  swap_int.cpp  type_align  type_align.cpp  typedef  typedef.cpp
src/chap-006/: change_loop  change_loop.cpp  paranthes  paranthes.cpp  remove_comments  remove_comments.cpp  strop  strop.cpp  sum  sum.cpp
src/chap-006/calc/: error.cpp  error.h  expr.cpp  expr.h  main.cpp  main.h  prim.cpp  prim.h  term.cpp  term.h  token.cpp  token.h
src/chap-007/: cat  cat.cpp  crypt  crypt.cpp  crypted.txt  declare  declare.cpp  decrypt  decrypt.cpp  enc.txt  error  error.cpp  fac  fac.cpp  hello  hello.cpp  tnode  tnode.cpp  tnode_char  tnode_char.cpp  transpone  transpone.cpp
src/chap-008/: fn_ex  fn_ex.cpp  rec_ex  rec_ex.cpp
src/chap-008/math/: cmathlib.h  math  math.cpp  mathlib.cpp  mathlib.h
src/chap-008/words/: words.cpp  words.h  words_list  words_list.cpp
src/chap-009/: analyzer.cpp  analyzer.h  analyzer_impl.h  show_includes  show_includes.cpp  show_includes.cpp.bak
src/chap-010/.bak/: date.h.bak  date_impl.h.bak  unix_date.h.bak  unix_date_impl.h.bak
src/chap-010/char_queue/: char_queue_abstractions.h  char_queue_list.cpp  char_queue_list.h  char_queue_tests.cpp  char_queue_tests.h  char_queue_vector.cpp  char_queue_vector.h  tests  tests.cpp  tests.h
src/chap-010/cross_static/: class_a.cpp  class_a.h  class_b.cpp  class_b.h  cross_static  cross_static.cpp  cross_static.h
src/chap-010/date/: use_date_mdy.cpp  use_date_mdy_body.cpp  use_date_mdy_body.h  use_date_unix.cpp  use_date_unix_body.cpp  use_date_unix_body.h
src/chap-010/histogram/: histogram.cpp  histogram.h  histogram_abstractions.h  histogram_helpers.cpp  histogram_helpers.h  use_histogram.cpp  use_histogram.h
src/chap-010/int_set/: int_set.cpp  int_set.h  use_int_set  use_int_set.cpp  use_int_set.h
src/chap-010/static/: static  static.cpp
src/chap-010/tnode/: tnode.cpp  tnode.h  tree.cpp  tree.h  tree_abstractions.h  tree_helpers.cpp  tree_helpers.h  use_tree  use_tree.cpp  use_tree.h
src/chap-011/expressions/: a.out  exp  exp.cpp  expressions  expressions.cpp
src/chap-011/int/: int  int.cpp
src/chap-011/lint/: lint  lint.cpp
src/chap-011/rint/: rint  rint.cpp
src/chap-011/smart_ptr/: .shared_ptr.cpp.swp  shared_ptr  shared_ptr.cpp
src/chap-011/string.copy/: string  string.cpp
src/chap-011/string.copy_on_write/: string  string.cpp
src/chap-011/vec4f/: mat4f.cpp  mat4f.h  test_mat4f  test_mat4f.cpp  test_vec4f  test_vec4f.cpp  vec4f  vec4f.cpp  vec4f.h
src/chap-011/vecf/: matf.cpp  matf_abstractions.h  matf_helpers.cpp  matf_helpers.h  matf_impl.h  test_matf  test_matf.cpp  test_vecf  test_vecf.cpp  vec_abstractions.h  vecf.cpp  vecf_abstractions.h  vecf_helpers.cpp  vecf_helpers.h  vecf_impl.h
src/chap-012/base_class/: CMakeLists.txt  base.cpp  base.hpp  derived_one.cpp  derived_one.hpp  derived_two.cpp  derived_two.hpp  test_runner.cpp
src/chap-012/char_vec/: char_vec  char_vec.cpp
src/chap-012/role_game/: abstractions.hpp
src/chap-012/ui/: CMakeLists.txt  app_opengl.cpp  line.cpp
src/chap-012/ui/abstractions/: circle.hpp  color.cpp  color.hpp  compositeshape.cpp  compositeshape.hpp  iapplication.hpp  iapplicationwindow.hpp  icircle.cpp  icircle.hpp  icolorshape.cpp  icolorshape.hpp  icomponent.hpp  idot.cpp  idot.hpp  idrawcontext.hpp  igrid.cpp  igrid.hpp  iline.cpp  iline.hpp  irectangle.cpp  irectangle.hpp  ishape.cpp  ishape.hpp  itriangle.cpp  itriangle.hpp  ixycoordinates.cpp  ixycoordinates.hpp  line.hpp  point.cpp  point.hpp  point2i.cpp  point2i.hpp  rectangle.hpp
src/chap-012/ui/abstractions.tests/: tests_runner.cpp
src/chap-012/ui/engine/: collisiondetector.cpp  collisiondetector.hpp  shared_ptr.hpp
src/chap-012/ui/engine.tests/: .tests_runner.cpp.swp  tests_runner.cpp
src/chap-012/ui/opengl_impl/: application.cpp  application.hpp  applicationconfig.cpp  applicationconfig.hpp  applicationwindow.cpp  applicationwindow.hpp  circle.cpp  circle.hpp  dot.cpp  dot.hpp  drawcontext.cpp  drawcontext.hpp  grid.cpp  grid.hpp  line.cpp  line.hpp  rectangle.cpp  rectangle.hpp  triangle.cpp  triangle.hpp  xycoordinates.cpp  xycoordinates.hpp
src/chap-012/ui/system/: sharedptr.hpp
src/chap-013/constraints/: constraints  constraints.cpp
src/chap-013/list_template_check/: ilename.map  list_template  list_template.cpp  list_template.cpp.005t.original  list_template.cpp.006t.gimple  list_template.ii  list_template.s
src/chap-013/map/: map  map.cpp  map_w_cmp  map_w_cmp.cpp
src/chap-014/filesystem/: CMakeLists.txt  fs.cpp  fs.h  fs_impl.h  use_fs.cpp  use_fs.h
src/chap-016/itors/: CMakeLists.txt  itor_abstractions.hpp  list_abstractions.hpp  test_runner_vector.cpp  test_runner_vector_itors_by_ref.cpp  test_runner_vector_itors_by_value.cpp  use  use.cpp  vector_abstractions.hpp
src/chap-019/allocator/: #pool.hpp#  CMakeLists.txt  CMakeLists.txt~  allocator.hpp  allocator.hpp~  pool.hpp  pool.hpp~  safe_iterator.hpp  test_runner_allocator  test_runner_allocator.cpp  test_runner_allocator.cpp~  test_runner_pool.cpp  test_runner_pool.cpp~  test_runner_vector.cpp  vector.hpp
src/chap-019/safe_iter/: CMakeLists.txt  CMakeLists.txt~  safe_container.hpp  safe_container.hpp~  safe_container_test_runner.cpp  safe_container_test_runner.cpp~  safe_iter  safe_iterator.hpp  safe_iterator.hpp~  use_safe_container  use_safe_container.cpp
src/exp/: a.cpp  b.cpp  exp  exp.cpp
(+143 files in other folders)
